* --sslmode starttls=must is now the default as a consequence of the
  previous sslcertck default.
  If you need an unencrypted connection, use --sslmode none.
* See the REMOVED FEATURES section below for further incompatibilities.
* fetchmail now requires an OpenSSL version that supports TLS v1.2, i. e.
  OpenSSL 1.0.1 or newer.

# MAJOR CHANGES
* The UIDL handler code is now much faster, especially noticable with lots of
  mail kept on a POP3 server. Where the 6.3.X code was of O(n^2) complexity,
  we're down to O(n log n).
  Contributed by Rainer Weikusat, MAD Partners Ltd./MSS GmbH.
* The POP3 code now always uses UIDL, except if "fetchall" is in effect.
  Fixes BerliOS Bug #16172. Fixes Debian Bug#345788.
* Fetchmail now enables SSL support by default. If this is undesired,
  ./configure --without-ssl should help.
* The OpenSSL code now excludes the SSL_OP_DONT_INSERT_EMPTY_FRAGMENTS option.
  This can cause interoperability problems with certain buggy servers, but is
  required to defang chosen-plaintext attacks against AES.  While probably hard
  to mount against fetchmail, let's play it safe rather than be sorry later.

# FEATURES ADDED
* Fetchmail can now retrieve credentials from PWMD. This needs to be enabled at
  compile-time and requires run-time configuration. See README.PWMD for details.
  Contributed by Ben Kibbey, author of libpwmd and pwmd.
* Fetchmail now supports a retrieve-error command line or rcfile option that
  takes exactly one argument, abort (default), continue or markseen.  This
  specifies the policy used by fetchmail to handle messages whose bodies
  fail to be retrieved due to server errors.  Both the continue and markseen
  options will skip the message with errors and allow the session to
  continue so that subsequent messages can be retrieved.  The markseen
  option will also mark the message with errors as seen.
  The default policy is to abort the session whenever a server error occurs.
  Contributed by Craig Brown.